--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -16,14 +16,15 @@ jobs:
         - uses: actions/checkout@v2
           with:
             repository: emqx/emqx-integration-test
+            token: ${{ secrets.OathToken }} 
             path: emqx-integration-test
         - uses: actions/checkout@v2
           with:
             path: emqx-rel
         - name: Run all test cases
           run: |
-            cd emqx-integration-test
             version=develop
+            cd emqx-integration-test
             sudo docker-compose -p emqx_auto_func_test up -d --build
             sudo docker ps -a
             sudo docker exec emqx_auto_func_test_emqx_1 bash -xc "cd /tests sed -i '/^set.*/d' run_emqx.sh export EMQX_DEPS_DEFAULT_VSN=${version} ./run_emqx.sh emqx-ce.spec "
