--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -16,7 +16,7 @@ jobs:
         - uses: actions/checkout@v2
           with:
             repository: emqx/emqx-integration-test
-            token: ${{ secrets.OathToken }} 
+            token: ${{ secrets.AccessToken }} 
             path: emqx-integration-test
         - uses: actions/checkout@v2
           with:
@@ -29,5 +29,3 @@ jobs:
             sudo docker ps -a
             sudo docker exec emqx_auto_func_test_emqx_1 bash -xc "cd /tests sed -i '/^set.*/d' run_emqx.sh export EMQX_DEPS_DEFAULT_VSN=${version} ./run_emqx.sh emqx-ce.spec "
             sudo docker exec emqx_auto_func_test_python_1 bash -xc "cd /tests && python ./boot.py "
-
-                
