--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,9 +1,10 @@
 name: Release
 
-on: 
-    push:
-        tags:
-            - v*
+# on: 
+#     push:
+#         tags:
+#             - v*
+on: push
 
 jobs:
   win:
