--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -69,9 +69,9 @@ jobs:
         EMQX_DEPS_DEFAULT_VSN: develop
         ERL_OTP: erl22.1
       run:
-        sudo docker run -d \
-          --name ${{ env.EMQX_NAME }}-${{ matrix.os }} \
-          -e EMQX_DEPS_DEFAULT_VSN=${{ env.EMQX_DEPS_DEFAULT_VSN }} \
+        sudo docker run - \
+          --name $EMQX_NAME-${{ matrix.os }} \
+          -e EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN \
           -v $(pwd):/emqx_rel \
-          emqx/build-env:${{ env.ERL_OTP }}-${{ matrix.os }} \
+          emqx/build-env:$ERL_OTP-${{ matrix.os }} \
           sh -c "make -C /emqx-rel"
