--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -59,7 +59,18 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu18.04,ubuntu16.04]
+        os: 
+          - ubuntu18.04 
+          - ubuntu16.04 
+          - ubuntu14.04 
+          - debian10
+          - debian9 
+          - debian8 
+          - opensuse
+          - centos7 
+          - centos6
+          - raspbian8
+          - raspbian9
   
     steps:
     - uses: actions/checkout@v1
@@ -69,4 +80,8 @@ jobs:
         EMQX_DEPS_DEFAULT_VSN: develop
         ERL_OTP: erl22.1
       run:
-        sudo docker run -i --name $EMQX_NAME-${{ matrix.os }} -e EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN -v $(pwd):/emqx_rel emqx/build-env:$ERL_OTP-${{ matrix.os }} sh -c "make -C /emqx_rel"
+        sudo docker run -i --name ${{ matrix.os }}-build -e EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN -e SYSTEM=${{ matrix.os }} -v $(pwd):/emqx_rel emqx/build-env:$ERL_OTP-${{ matrix.os }} sh -c "cd /emqx_rel/.github/workflows/release; export EMQX_NAME=emqx; ./build.sh; export EMQX_NAME=emqx-edge; ./build.sh"
+    - uses: actions/upload-artifact@v1
+      with:
+        name: emqx-${{ matrix.os }}
+        path: _packages
