--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -21,22 +21,23 @@ jobs:
         - uses: actions/checkout@v2
           with:
             path: emqx-rel
+        - name: Run paho test
+            run: |
+              cd emqx-integration-test/paho-test
+              EMQX_DEPS_DEFAULT_VSN=develop TARGET=emqx/emqx PAHO_BRANCH="develop-4.0" make -C "${WORKSPACE}/paho-test"
         - name: Run all test cases
-          if: failure()
+          if: always()
           run: |
-            exit 1
             cd emqx-integration-test/docker-compose
             sudo docker-compose -p emqx_auto_func_test up -d --build
             sudo docker ps -a
             sudo docker exec emqx_auto_func_test_emqx_1 bash -xc "cd /tests; sed -i '/^set.*/d' run_emqx.sh; export EMQX_DEPS_DEFAULT_VSN=develop; ./run_emqx.sh emqx-ce.spec "
             sudo docker exec emqx_auto_func_test_python_1 bash -xc "cd /tests && python ./boot.py "
-            sudo docker-compose -p emqx_auto_func_test down
         - uses: actions/upload-artifact@v1
           with:
-            if: failure()
             name: logs
             path: emqx-integration-test/docker-compose/files/logs
-        - name: Run paho test
+        - name: Get test results
           run: |
-            cd emqx-integration-test/paho-test
-            EMQX_DEPS_DEFAULT_VSN=develop TARGET=emqx/emqx PAHO_BRANCH="develop-4.0" make -C "${WORKSPACE}/paho-test"
+            sudo docker exec emqx_auto_func_test_python_1 bash -xc "cd /tests && python ./boot.py "
+            sudo docker-compose -p emqx_auto_func_test down
