--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -72,7 +72,7 @@ jobs:
           - centos6
           - raspbian10
           - raspbian9
-          # - raspbian8
+          - raspbian8
   
     steps:
     - uses: actions/checkout@v2
@@ -83,7 +83,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         path: emqx-rel
-    - name: build
+    - name: build docker image
       env:
         EMQX_DEPS_DEFAULT_VSN: develop
         ERL_OTP: erl22.1
@@ -93,7 +93,14 @@ jobs:
           curl -L -o qemu-x86_64-static.tar.gz https://github.com/multiarch/qemu-user-static/releases/download/v4.0.0/qemu-x86_64-static.tar.gz && tar xzf qemu-x86_64-static.tar.gz &&
           curl -L -o qemu-aarch64-static.tar.gz https://github.com/multiarch/qemu-user-static/releases/download/v4.0.0/qemu-aarch64-static.tar.gz && tar xzf qemu-aarch64-static.tar.gz &&
         cd -
-        sudo docker build --no-cache -t build-env:$ERL_OTP-${{ matrix.os }} --build-arg OTP_VERSION=$ERL_OTP -f emqx-packages-docker/${{ matrix.os }}/Dockerfile .
+        cd  emqx-packages-docker &&
+          sudo docker build --no-cache -t build-env:$ERL_OTP-${{ matrix.os }} --build-arg OTP_VERSION=$ERL_OTP -f ${{ matrix.os }}/Dockerfile .
+        cd -
+    - name: build emqx
+      env:
+        EMQX_DEPS_DEFAULT_VSN: develop
+        ERL_OTP: erl22.1
+      run: |
         sudo docker run -i \
           --name ${{ matrix.os }}-build \
           -e EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN \
