--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -56,7 +56,7 @@ jobs:
         path: _build/emqx/rel/emqx
 
   linux:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
@@ -70,38 +70,38 @@ jobs:
           - opensuse
           - centos7 
           - centos6
-          - raspbian10
-          - raspbian9
-          - raspbian8
   
     steps:
     - uses: actions/checkout@v2
-      with:
-        repository: emqx/emqx-packages-docker
-        token: ${{ secrets.AccessToken }} 
-        path: emqx-packages-docker
-    - uses: actions/checkout@v2
-      with:
-        path: emqx-rel
-    # - name: build docker image
-    #   env:
-    #     EMQX_DEPS_DEFAULT_VSN: develop
-    #     ERL_OTP: erl22.1
-    #   run: |
-    #     mkdir -p emqx-packages-docker/tmp
-    #     cd emqx-packages-docker/tmp &&
-    #       curl -L -o qemu-x86_64-static.tar.gz https://github.com/multiarch/qemu-user-static/releases/download/v4.0.0/qemu-x86_64-static.tar.gz && tar xzf qemu-x86_64-static.tar.gz &&
-    #       curl -L -o qemu-aarch64-static.tar.gz https://github.com/multiarch/qemu-user-static/releases/download/v4.0.0/qemu-aarch64-static.tar.gz && tar xzf qemu-aarch64-static.tar.gz &&
-    #     cd -
-    #     cd  emqx-packages-docker &&
-    #       sudo docker build --no-cache -t build-env:$ERL_OTP-${{ matrix.os }} --build-arg OTP_VERSION=$ERL_OTP -f ${{ matrix.os }}/Dockerfile .
-    #     cd -
     - name: build emqx
       env:
         EMQX_DEPS_DEFAULT_VSN: develop
         ERL_OTP: erl22.1
       run: |
-        sudo docker run -i --name ${{ matrix.os }}-build -e EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN -e SYSTEM=${{ matrix.os }} -v $(pwd)/emqx-rel:/emqx-rel emqx/build-env:$ERL_OTP-${{ matrix.os }} sh -c "cd /emqx-rel/.github/workflows/release; if [ -z $(echo $SYSTEM | grep -o raspbian) ];then export EMQX_NAME=emqx; ./build.sh; fi; export EMQX_NAME=emqx-edge; ./build.sh"
+        sudo docker run -i --name ${{ matrix.os }}-build -e EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN -e SYSTEM=${{ matrix.os }} -v $(pwd):/emqx-rel emqx/build-env:$ERL_OTP-${{ matrix.os }} sh -c "cd /emqx-rel/.github/workflows/release; if [ -z $(echo $SYSTEM | grep -o raspbian) ];then export EMQX_NAME=emqx; ./build.sh; fi; export EMQX_NAME=emqx-edge; ./build.sh"
+    - uses: actions/upload-artifact@v1
+      with:
+        name: emqx-${{ matrix.os }}
+        path: _packages
+
+  raspbian:
+    runs-on: self-hosted
+
+    strategy:
+      matrix:
+        os: 
+          - raspbian10
+          - raspbian9
+          - raspbian8
+          
+    steps:
+    - uses: actions/checkout@v2
+    - name: build emqx
+      env:
+        EMQX_DEPS_DEFAULT_VSN: develop
+        ERL_OTP: erl22.1
+      run: |
+        sudo docker run -i --name ${{ matrix.os }}-build -e EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN -e SYSTEM=${{ matrix.os }} -v $(pwd):/emqx-rel emqx/build-env:$ERL_OTP-${{ matrix.os }} sh -c "cd /emqx-rel/.github/workflows/release; if [ -z $(echo $SYSTEM | grep -o raspbian) ];then export EMQX_NAME=emqx; ./build.sh; fi; export EMQX_NAME=emqx-edge; ./build.sh"
     - uses: actions/upload-artifact@v1
       with:
         name: emqx-${{ matrix.os }}
