--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -63,13 +63,13 @@ jobs:
         os: 
           - ubuntu18.04 
           - ubuntu16.04 
-          - ubuntu14.04 
-          - debian10
-          - debian9 
-          - debian8 
-          - opensuse
-          - centos7 
-          - centos6
+          # - ubuntu14.04 
+          # - debian10
+          # - debian9 
+          # - debian8 
+          # - opensuse
+          # - centos7 
+          # - centos6
   
     steps:
     - uses: actions/checkout@v2
@@ -79,7 +79,7 @@ jobs:
         ERL_OTP: erl22.1
       run: 
         # sudo docker run -i --name ${{ matrix.os }}-build -e EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN -e SYSTEM=${{ matrix.os }} -v $(pwd):/emqx-rel emqx/build-env:$ERL_OTP-${{ matrix.os }} sh -c "cd /emqx-rel/.github/workflows/release; if [ ! -z $(echo $SYSTEM | grep -o raspbian) ];then EMQX_NAME=emqx ./build.sh; fi; EMQX_NAME=emqx-edge ./build.sh"
-        sudo docker run -i --name ${{ matrix.os }}-build -e EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN -e SYSTEM=${{ matrix.os }} -v $(pwd):/emqx-rel emqx/build-env:$ERL_OTP-${{ matrix.os }} sh -c "cd /emqx-rel; make emqx; make emqx-edge"
+        sudo docker run -i --name ${{ matrix.os }}-build -e EMQX_DEPS_DEFAULT_VSN=$EMQX_DEPS_DEFAULT_VSN -e SYSTEM=${{ matrix.os }} -v $(pwd):/emqx_rel emqx/build-env:$ERL_OTP-${{ matrix.os }} sh -c "cd /emqx_rel; make emqx; make emqx-edge"
     - uses: actions/upload-artifact@v1
       with:
         name: emqx-${{ matrix.os }}
