--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -26,7 +26,7 @@ jobs:
         #     cd emqx-integration-test/paho-test
         #     EMQX_DEPS_DEFAULT_VSN=develop TARGET=emqx/emqx PAHO_BRANCH="develop-4.0" make 
         - name: Run all test cases
-          if: always()
+          if: failure()
           run: |
             exit 1
             cd emqx-integration-test/docker-compose
@@ -35,7 +35,7 @@ jobs:
             sudo docker exec emqx_auto_func_test_emqx_1 bash -xc "cd /tests; sed -i '/^set.*/d' run_emqx.sh; export EMQX_DEPS_DEFAULT_VSN=develop; ./run_emqx.sh emqx-ce.spec "
             sudo docker exec emqx_auto_func_test_python_1 bash -xc "cd /tests && python ./boot.py "
         - uses: actions/upload-artifact@v1
-          if: always()
+          if: failure()
           with:
             name: logs
             path: emqx-integration-test/docker-compose/files/logs
