--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -30,7 +30,8 @@ jobs:
             sudo docker exec emqx_auto_func_test_emqx_1 bash -xc "cd /tests; sed -i '/^set.*/d' run_emqx.sh; export EMQX_DEPS_DEFAULT_VSN=develop; ./run_emqx.sh emqx-ce.spec "
             sudo docker exec emqx_auto_func_test_python_1 bash -xc "cd /tests && python ./boot.py "
         - uses: actions/upload-artifact@v1
-          if: failure()
+          # if: failure()
+          if: always()
           with:
             name: logs
             path: emqx-integration-test/docker-compose/files/logs
