--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,5 +1,19 @@
 name: Run all test cases
 
+# on: 
+#   push:
+#     branch:
+#       - develop
+#       - master
+#       - release-*
+#     tags:
+#       - v*
+#   pull_request:
+#     branch:
+#       - develop
+#       - master
+#       - release-*
+
 on: [push, pull_request]
 
 jobs:
@@ -18,26 +32,19 @@ jobs:
             repository: emqx/emqx-integration-test
             token: ${{ secrets.AccessToken }} 
             path: emqx-integration-test
-        - uses: actions/checkout@v2
-          with:
-            path: emqx-rel
         - name: Run all test cases
           run: |
             cd emqx-integration-test/docker-compose
             sudo docker-compose -p emqx_auto_func_test up -d --build
             sudo docker ps -a
-            sudo docker exec emqx_auto_func_test_emqx_1 bash -xc "cd /tests; sed -i '/^set.*/d' run_emqx.sh; export EMQX_DEPS_DEFAULT_VSN=develop; ./run_emqx.sh emqx-ce.spec "
+            sudo docker exec emqx_auto_func_test_emqx_1 bash -xc "cd /tests; sed -i '/^set.*/d' run_emqx.sh; export EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g"); ./run_emqx.sh emqx-ce.spec "
             sudo docker exec emqx_auto_func_test_python_1 bash -xc "cd /tests && python ./boot.py "
+            sudo docker-compose -p emqx_auto_func_test down
         - uses: actions/upload-artifact@v1
           if: always()
           with:
             name: logs
             path: emqx-integration-test/docker-compose/files/logs
-        - name: Get test results
-          run: |
-            rm -f emqx-integration-test/docker-compose/files/logs/index.html
-            sudo docker exec emqx_auto_func_test_python_1 bash -xc "cd /tests && python ./boot.py "
-            sudo docker-compose -p emqx_auto_func_test down
         - name: Run paho test
           run: |
             cd emqx-integration-test/paho-test
