--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,20 +1,20 @@
 name: Run all test cases
 
-# on: 
-#   push:
-#     branch:
-#       - develop
-#       - master
-#       - release-*
-#     tags:
-#       - v*
-#   pull_request:
-#     branch:
-#       - develop
-#       - master
-#       - release-*
+on: 
+  push:
+    branch:
+      - develop
+      - master
+      - release-*
+    tags:
+      - v*
+  pull_request:
+    branch:
+      - develop
+      - master
+      - release-*
 
-on: [push, pull_request]
+# on: [push, pull_request]
 
 jobs:
 
