--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -133,11 +133,11 @@ jobs:
         QEMU_ARCH: ${{ matrix.arch[1] }}
         EMQX_DEPS_DEFAULT_VSN: $(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g")
       run: |
-        docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-        make emqx-docker-build
-        make emqx-docker-save
-        make emqx-edge-docker-build
-        make emqx-edge-docker-save
+        make -C deploy/docker prepare
+        TARGET=emqx/emqx make -C deploy/docker 
+        TARGET=emqx/emqx make -C deploy/docker save
+        TARGET=emqx/emqx-edge make -C deploy/docker 
+        TARGET=emqx/emqx-edge make -C deploy/docker save
     - uses: actions/upload-artifact@v1
       with:
         name: emqx-docker-${{ matrix.arch[0] }}
