--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -133,11 +133,11 @@ jobs:
         QEMU_ARCH: ${{ matrix.arch[1] }}
         EMQX_DEPS_DEFAULT_VSN: $(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g")
       run: |
-        make -C deploy/docker prepare
-        TARGET=emqx/emqx make -C deploy/docker 
-        TARGET=emqx/emqx make -C deploy/docker save
-        TARGET=emqx/emqx-edge make -C deploy/docker 
-        TARGET=emqx/emqx-edge make -C deploy/docker save
+        sudo make -C deploy/docker prepare
+        sudo TARGET=emqx/emqx make -C deploy/docker 
+        sudo TARGET=emqx/emqx make -C deploy/docker save
+        sudo TARGET=emqx/emqx-edge make -C deploy/docker 
+        sudo TARGET=emqx/emqx-edge make -C deploy/docker save
     - uses: actions/upload-artifact@v1
       with:
         name: emqx-docker-${{ matrix.arch[0] }}
