--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -127,17 +127,28 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+      with: emqx-rel
+    - uses: actions/checkout@v2
+      with:
+        repository: emqx/emqx-integration-test
+        token: ${{ secrets.AccessToken }} 
+        path: emqx-integration-test
     - name: build emqx docker image
       env:
         ARCH: ${{ matrix.arch[0] }}
         QEMU_ARCH: ${{ matrix.arch[1] }}
       run: |
-        export EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g")
+        export 
         sudo docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-        sudo TARGET=emqx/emqx make -C deploy/docker 
-        sudo TARGET=emqx/emqx make -C deploy/docker save
-        sudo TARGET=emqx/emqx-edge make -C deploy/docker 
-        sudo TARGET=emqx/emqx-edge make -C deploy/docker save
+        sudo EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g") ARCH=${{ matrix.arch[0] }} QEMU_ARCH=${{ matrix.arch[1] }} TARGET=emqx/emqx make -C emqx-rel/deploy/docker 
+        sudo EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g") ARCH=${{ matrix.arch[0] }} QEMU_ARCH=${{ matrix.arch[1] }} TARGET=emqx/emqx make -C emqx-rel/deploy/docker save
+        sudo EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g") ARCH=${{ matrix.arch[0] }} QEMU_ARCH=${{ matrix.arch[1] }} TARGET=emqx/emqx-edge make -C emqx-rel/deploy/docker 
+        sudo EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g") ARCH=${{ matrix.arch[0] }} QEMU_ARCH=${{ matrix.arch[1] }} TARGET=emqx/emqx-edge make -C emqx-rel/deploy/docker save
+    - name: docker cluster test
+      if: ${{ matrix.arch[0] }} == amd64
+      run: |
+        sudo TARGET=emqx/emqx EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g") PAHO_BRANCH="develop-4.0" make -C emqx-integration-test/paho-test cluster_test
+        sudo TARGET=emqx/emqx-edge EMQX_DEPS_DEFAULT_VSN=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g") PAHO_BRANCH="develop-4.0" make -C emqx-integration-test/paho-test cluster_test
     - uses: actions/upload-artifact@v1
       with:
         name: emqx-docker-${{ matrix.arch[0] }}
